k8s/mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-wilson-liao
  labels:
    name: assignment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: mqtt
      student: wilson-liao
  template:
    metadata:
      labels:
        component: mqtt
        student: wilson-liao
    spec:
      containers:
        - name: mqtt
          image: wilsonliao/iot-home-mqtt:2.0.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
