k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-wilson-liao
  labels:
    name: assignment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: server
      student: wilson-liao
  template:
    metadata:
      labels:
        component: server
        student: wilson-liao
    spec:
      containers:
        - name: server
          image: wilsonliao/iot-home-server:2.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 20m
              memory: 64Mi
