k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-home-wilson-liao
  labels:
    name: assignment
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: iot-home-wilson-liao.assignment.eks004.en.internal
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-wilson-liao
                port:
                  # number: 3000
                  name: http
